refactored downloader class